@@ -66,6 +66,7 @@ AlbumView::AlbumView(QWidget *p)
     , detailsReceived(0)
 {
     engine=ContextEngine::create(this);
+    #ifdef ARTIST_IMAGE_SUPPORT
     #ifndef Q_OS_WIN
     // Full width covers not working under windows. Issue #1252
     fullWidthCoverAction = new Action(tr("Full Width Cover"), this);
@@ -73,11 +74,14 @@ AlbumView::AlbumView(QWidget *p)
     connect(fullWidthCoverAction, SIGNAL(toggled(bool)), this, SLOT(setScaleImage(bool)));
     fullWidthCoverAction->setChecked(Configuration(metaObject()->className()).get("fullWidthCover", false));
     #endif
+    #endif
     refreshAction = ActionCollection::get()->createAction("refreshalbum", tr("Refresh Album Information"), Icons::self()->refreshIcon);
     connect(refreshAction, SIGNAL(triggered()), this, SLOT(refresh()));
     connect(engine, SIGNAL(searchResult(QString,QString)), this, SLOT(searchResponse(QString,QString)));
+    #ifdef ARTIST_IMAGE_SUPPORT
     connect(Covers::self(), SIGNAL(cover(Song,QImage,QString)), SLOT(coverRetrieved(Song,QImage,QString)));
     connect(Covers::self(), SIGNAL(coverUpdated(Song,QImage,QString)), SLOT(coverUpdated(Song,QImage,QString)));
+    #endif
     connect(text, SIGNAL(anchorClicked(QUrl)), SLOT(playSong(QUrl)));
     text->setContextMenuPolicy(Qt::CustomContextMenu);
     connect(text, SIGNAL(customContextMenuRequested(QPoint)), this, SLOT(showContextMenu(QPoint)));
@@ -95,8 +99,10 @@ AlbumView::AlbumView(QWidget *p)
 
 AlbumView::~AlbumView()
 {
+    #ifdef ARTIST_IMAGE_SUPPORT
     #ifndef Q_OS_WIN
     Configuration(metaObject()->className()).set("fullWidthCover", fullWidthCoverAction->isChecked());
+    #endif
     #endif
 }
 
@@ -109,8 +115,10 @@ void AlbumView::showContextMenu(const QPoint &pos)
     } else {
         menu->addAction(refreshAction);
     }
+    #ifdef ARTIST_IMAGE_SUPPORT
     #ifndef Q_OS_WIN
     menu->addAction(fullWidthCoverAction);
+    #endif
     #endif
     menu->exec(text->mapToGlobal(pos));
     delete menu;
@@ -159,11 +167,15 @@ void AlbumView::update(const Song &song, bool force)
         }
         clearDetails();
         setHeader(song.album.isEmpty() ? stdHeader : song.album);
+        #ifdef ARTIST_IMAGE_SUPPORT
         Covers::Image cImg=Covers::self()->requestImage(song, true);
         if (!cImg.img.isNull()) {
             detailsReceived|=Cover;
             pic=createPicTag(cImg.img, cImg.fileName);
         }
+        #else
+        detailsReceived|=Cover;
+        #endif
         getTrackListing();
         getDetails();
 
@@ -262,6 +274,7 @@ void AlbumView::getDetails()
     engine->search(QStringList() << currentSong.albumArtist() << currentSong.album, ContextEngine::Album);
 }
 
+#ifdef ARTIST_IMAGE_SUPPORT
 void AlbumView::coverRetrieved(const Song &s, const QImage &img, const QString &file)
 {
     if (!s.isArtistImageRequest() && (s==currentSong && pic.isEmpty())) {
@@ -289,6 +302,7 @@ void AlbumView::coverUpdated(const Song &s, const QImage &img, const QString &fi
         }
     }
 }
+#endif
 
 void AlbumView::searchResponse(const QString &resp, const QString &lang)
 {
